Fix modal vertical alignment on xs devices

--- a/casn-frontend/casn-app/src/app/styles/styles.scss
+++ b/casn-frontend/casn-app/src/app/styles/styles.scss
@@ -68,7 +68,7 @@ body {
   overflow-x: hidden;
   background-color: rgba(0,0,0,0.4);
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
 }
 
